--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html>
     <head>
-        <script src="https://code.jquery.com/jquery.js"></script>
         <script src="https://www.gstatic.com/firebasejs/4.13.0/firebase.js"></script>
-        <script src="firebase.js" type="text/javascript"></script>
-        <script src="app.js" type="text/javascript"></script>
+        <script src="https://code.jquery.com/jquery.js"></script>
+        <script src="myfirebase.js" type="text/javascript"></script>
+        <!-- <script src="app.js" type="text/javascript"></script> -->
     </head>
     <body>
         <input type="text" id="search-field"></input>
-        <button id="search-button" type="submit" value="submit">Submit</button>
-    </body>
+        <input type="submit" id="search-button" value="Submit"></input>
+        </body>
 </html>
