--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     </head>
     <body>
         <input type="text" id="search-field"></input>
-        <input type="submit" id="search-button" value="Submit"></input>
+        <button id="search-button">Submit</button>
         </body>
 </html>
