--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
     <body>
         <input type="text" id="search-field"></input>
         <button id="search-button">Submit</button>
-        </body>
+        <br>
+        <p>Popular searches: <span id="popular"></span></p>
+    </body>
 </html>
