--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <script src="https://www.gstatic.com/firebasejs/4.13.0/firebase.js"></script>
         <script src="https://code.jquery.com/jquery.js"></script>
         <script src="myfirebase.js" type="text/javascript"></script>
-        <!-- <script src="app.js" type="text/javascript"></script> -->
+        <script src="app.js" type="text/javascript"></script>
     </head>
     <body>
         <input type="text" id="search-field"></input>
