--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
     <head>
         <script src="https://www.gstatic.com/firebasejs/4.13.0/firebase.js"></script>
         <script src="https://code.jquery.com/jquery.js"></script>
-        <script src="myfirebase.js" type="text/javascript"></script>
+        <!-- <script src="myfirebase.js" type="text/javascript"></script> -->
         <script src="app.js" type="text/javascript"></script>
     </head>
     <body>
         <input type="text" id="search-field"></input>
         <button id="search-button">Submit</button>
         <br>
-        <p>Popular searches: <span id="popular"></span></p>
+        <p>Videos from your area: <span id="popular"></span></p>
+        <p>Recent searches:<span id="recent-searches"></span></p>
     </body>
 </html>
