--- a/index.html
+++ b/index.html
@@ -46,51 +46,54 @@
         <div class="row">
           <ul class="nav nav-pills mx-auto" style="width:100%">
             <li class="nav-item">
-              <a class="nav-link bg-secondary text-light m-2" href="#">Recently Uploaded From This Location</a>
+              <a id="recently" class="nav-link bg-secondary text-light m-2" href="#">Recently Uploaded From This Location</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-dark bg-danger  m-2" href="#">Viewing History</a>
+              <a id="history" class="nav-link text-dark bg-danger  m-2" href="#">Viewing History</a>
             </li>
           </ul>
-
-          <div class="container bg-dark">
-            <div class="card bg-dark" style="width:100%">
-              <div class="cardThumb">
-              <img class="card-img-top" id="cardThumb1" src="resources/img/img1_DSF9340-HDR.jpg" alt="Card image" alt="Thumbnail">
+          <div id="xyz">
+            <div class="container bg-dark">
+              <div class="card bg-dark" style="width:100%">
+                <div id="cardThumb1">
+                <img class="card-img-top" id="cardThumb1" src="resources/img/img1_DSF9340-HDR.jpg" alt="Card image" alt="Thumbnail">
+                </div>
+                <div class="card-img-overlay">
+                  <p class="card-text"><span id="youtubeTitle1">Lorem ipsum dolor sit amet</span></p>
+                  <a href="#" id="youtubeLink1" class="btn btn-danger">46.414382,10.013988</a>
+                </div>
               </div>
-              <div class="card-img-overlay">
-                <p class="card-text"><span id="youtubeTitle1">Lorem ipsum dolor sit amet</span></p>
-                <a href="#" id="youtubeLink1" class="btn btn-danger">46.414382,10.013988</a>
+              <div class="card bg-dark" style="width:100%">
+                  <div id="cardThumb2">
+                <img class="card-img-top" id="cardThumb2" src="resources/img/IMG_7559.JPG" alt="Card image" alt="Thumbnail">
+                </div>
+                <div class="card-img-overlay">
+                  <p class="card-text"><span id="youtubeTitle2">Pri ancillae epicurei et, stet ornatus ne mel, iusto fabellas mel in.</span> </p>
+                  <a href="#" id="youtubeLink2" class="btn btn-danger">46.414382,10.013988</a>
+                </div>
+              </div>
+              <div class="card bg-dark" style="width:100%">
+                  <div id="cardThumb3">
+                <img class="card-img-top" id="cardThumb3" src="resources/img/img2_DSCF6619.JPG" alt="Card image" alt="Thumbnail">
+                </div>
+                <div class="card-img-overlay">
+                  <p class="card-text"><span id="youtubeTitle3">Mel graeci possim assueverit cu, an vim fugit omnes salutandi. Ea sale assum exerci quo, no lorem convenire
+                    cotidieque est.</span></p>
+                  <a href="#" id="youtubeLink3" class="btn btn-danger">46.414382,10.013988</a>
+                </div>
+              </div>
+              <div class="card bg-dark" style="width:100%">
+                <div id="cardThumb4">
+                  <img class="card-img-top" id="cardThumb4" src="resources/img/img3_DSF8751-HDR.jpg" alt="Card image" alt="Thumbnail">
+              </div>
+                <div class="card-img-overlay">
+                  <p class="card-text"><span id="youtubeTitle4">Vix eros adolescens id, ei alii erat vitae nec.</span></p>
+                  <a href="#" id="youtubeLink4" class="btn btn-danger">46.414382,10.013988</a>
+                </div>
               </div>
             </div>
-            <div class="card bg-dark" style="width:100%">
-                <div class="cardThumb">
-              <img class="card-img-top" id="cardThumb2" src="resources/img/IMG_7559.JPG" alt="Card image" alt="Thumbnail">
-              </div>
-              <div class="card-img-overlay">
-                <p class="card-text"><span id="youtubeTitle2">Pri ancillae epicurei et, stet ornatus ne mel, iusto fabellas mel in.</span> </p>
-                <a href="#" id="youtubeLink2" class="btn btn-danger">46.414382,10.013988</a>
-              </div>
-            </div>
-            <div class="card bg-dark" style="width:100%">
-                <div class="cardThumb">
-              <img class="card-img-top" id="cardThumb3" src="resources/img/img2_DSCF6619.JPG" alt="Card image" alt="Thumbnail">
-              </div>
-              <div class="card-img-overlay">
-                <p class="card-text"><span id="youtubeTitle3">Mel graeci possim assueverit cu, an vim fugit omnes salutandi. Ea sale assum exerci quo, no lorem convenire
-                  cotidieque est.</span></p>
-                <a href="#" id="youtubeLink3" class="btn btn-danger">46.414382,10.013988</a>
-              </div>
-            </div>
-            <div class="card bg-dark" style="width:100%">
-              <div class="cardThumb">
-                <img class="card-img-top" id="cardThumb4" src="resources/img/img3_DSF8751-HDR.jpg" alt="Card image" alt="Thumbnail">
-            </div>
-              <div class="card-img-overlay">
-                <p class="card-text"><span id="youtubeTitle4">Vix eros adolescens id, ei alii erat vitae nec.</span></p>
-                <a href="#" id="youtubeLink4" class="btn btn-danger">46.414382,10.013988</a>
-              </div>
-            </div>
+          </div>
+            <div id="recentDiv">
             <span>
               <img src="resources/img/youtube image.png" height="50px" alt="Thumbnail">
               <caption>Random Title</caption>
@@ -110,6 +113,7 @@
               <img src="resources/img/youtube image.png" height="50px" alt="Thumbnail">
               <caption>Random Title</caption>
             </span>
+          </div>
             <HR>
           </div>
         </div>
