--- a/index.html
+++ b/index.html
@@ -30,7 +30,13 @@
         <button id="btn-temp" class="btn btn-outline-light my-2 my-sm-0" type="button">Temp</button>
         <input id="lat" type=text value="" placeholder="latitude">
         <input id="long" type=text value="" placeholder="longitude">
-        <input id="rad" type=text value="" placeholder="radius (in miles)">
+        <select id="rad" name="radius">
+          <option value="1">1</option>
+          <option value="5">5</option>
+          <option value="10" selected>10</option>
+          <option value="50">50</option>
+        </select>
+        <!-- <input id="rad" type=text value="" placeholder="radius (in miles)"> -->
 
       </form>
 
@@ -39,7 +45,7 @@
       <div class="row mx-auto"></div>
       <div class="mx-auto">
 
-        <div class="videoWrapper" id="videoIframe">
+        <div class="videoWrapper" style="width:100%" id="videoIframe">
           <iframe width="100%" src="https://www.youtube.com/embed/PN_us-YBMZM" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
         </div>
@@ -52,7 +58,7 @@
               <a id="history" class="nav-link text-dark bg-danger  m-2" href="#">History</a>
             </li>
           </ul>
-          <div id="xyz">
+          <div id="additionalDiv" style="width:100%">
             <div class="container bg-dark">
               <div class="card bg-dark" style="width:100%">
                 <div id="cardThumb1">
@@ -93,28 +99,28 @@
               </div>
             </div>
           </div>
-            <div id="recentDiv">
-                <p>Videos from your area: <span id="popular"></span></p>
-                <p>Recent searches: <span id="recent-searches"></span></p>
-            <span>
-              <img src="resources/img/youtube image.png" height="50px" alt="Thumbnail">
-              <caption>Random Title</caption>
-            </span>
-            <HR>
-            <span>
-              <img src="resources/img/youtube image.png" height="50px" alt="Thumbnail">
-              <caption>Random Title</caption>
-            </span>
-            <HR>
-            <span>
-              <img src="resources/img/youtube image.png" height="50px" alt="Thumbnail">
-              <caption>Random Title</caption>
-            </span>
-            <HR>
-            <span>
-              <img src="resources/img/youtube image.png" height="50px" alt="Thumbnail">
-              <caption>Random Title</caption>
-            </span>
+            <div id="historyDiv" style="width:100%">
+              <p>Videos from your area: <span id="popular"></span></p>
+              <p>Recent searches: <span id="recent-searches"></span></p>
+              <span>
+                <img src="resources/img/youtube image.png" height="50px" alt="Thumbnail">
+                <caption>Random Title</caption>
+              </span>
+              <HR>
+              <span>
+                <img src="resources/img/youtube image.png" height="50px" alt="Thumbnail">
+                <caption>Random Title</caption>
+              </span>
+              <HR>
+              <span>
+                <img src="resources/img/youtube image.png" height="50px" alt="Thumbnail">
+                <caption>Random Title</caption>
+              </span>
+              <HR>
+              <span>
+                <img src="resources/img/youtube image.png" height="50px" alt="Thumbnail">
+                <caption>Random Title</caption>
+              </span>
           </div>
             <HR>
           </div>
