fixed resizing bug

--- a/index.html
+++ b/index.html
@@ -36,14 +36,13 @@
           <option value="10" selected>10</option>
           <option value="50">50</option>
         </select>
-        <!-- <input id="rad" type=text value="" placeholder="radius (in miles)"> -->
 
       </form>
 
     </nav>
     <div class="card bg-dark" style="width:100%">
       <div class="row mx-auto"></div>
-      <div class="mx-auto">
+      <div class="mx-auto" style="width:100%">
 
         <div class="videoWrapper" style="width:100%" id="videoIframe">
           <iframe width="100%" src="https://www.youtube.com/embed/PN_us-YBMZM" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
@@ -126,6 +125,7 @@
           </div>
         </div>
       </div>
+    </div>
 
       <!-- Firebase -->
       <script src="https://www.gstatic.com/firebasejs/4.13.0/firebase.js"></script>
