--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
           <option value="10" selected>10</option>
           <option value="50">50</option>
         </select>
-
+        <div id="floating-panel">
+          <input id="address" type="textbox" value="Sydney, NSW">
+          <input id="submit" type="button" value="Geocode">
+        </div>
       </form>
 
     </nav>
@@ -144,11 +147,14 @@
 
       <!-- Bootstrap related JS -->
       <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+      <script src="https://code.jquery.com/jquery.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
         crossorigin="anonymous"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
-
+      <script async defer
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBPJY8PEhnSLeidBniCMbet80SlznQUFvM&callback=initMap">
+      </script>
       <script src="resources/app.js"></script>
 </body>
 
