--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <input type="text" id="search-field"></input>
         <button id="search-button">Submit</button>
         <br>
-        <p>Videos from your area: <span id="popular"></span></p>
+        <p>Videos from your area: <span id="user-results"></span></p>
         <p>Recent searches: <span id="recent-searches"></span></p>
     </body>
 </html>
