--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
     <head>
         <script src="https://www.gstatic.com/firebasejs/4.13.0/firebase.js"></script>
         <script src="https://code.jquery.com/jquery.js"></script>
-        <!-- <script src="myfirebase.js" type="text/javascript"></script> -->
-        <script src="app.js" type="text/javascript"></script>
+        <script src="app2.js" type="text/javascript"></script>
+        <!-- <script src="app.js" type="text/javascript"></script> -->
     </head>
     <body>
         <input type="text" id="search-field"></input>
