--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <script src="https://www.gstatic.com/firebasejs/4.13.0/firebase.js"></script>
         <script src="https://code.jquery.com/jquery.js"></script>
         <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
+        <script src="http://maps.google.com/maps/api/js?key=AIzaSyCXz3ctOfdCYgcEHTokEyM5Dso_kiMJDeY"></script>
         <script src="app2.js" type="text/javascript"></script>
     </head>
     <body>
