--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
     <head>
         <script src="https://www.gstatic.com/firebasejs/4.13.0/firebase.js"></script>
         <script src="https://code.jquery.com/jquery.js"></script>
-        <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
         <script src="http://maps.google.com/maps/api/js?key=AIzaSyCXz3ctOfdCYgcEHTokEyM5Dso_kiMJDeY"></script>
+        <!--<script src="http://maps.google.com/maps/api/js"></script>-->
         <script src="app2.js" type="text/javascript"></script>
+        <!-- <script src="app.js" type="text/javascript"></script> -->
     </head>
     <body>
         <input type="text" id="search-field"></input>
