--- a/index.html
+++ b/index.html
@@ -1,143 +1,145 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+        crossorigin="anonymous">
+    <!-- Resource links -->
+    <link rel="stylesheet" type="text/css" href="resources/style.css">
+    <title>Geocoding service</title>
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+    <meta charset="utf-8">
+  </head>
+  <body>
+        <div class="split left" id="map-section"></div>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <!-- Bootstrap -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-    crossorigin="anonymous">
-  <!-- Resource links -->
-  <link rel="stylesheet" type="text/css" href="resources/style.css">
+              <!-- <input type="text" id="search-field"></input>
+              <button id="search-button">Submit</button>
+              <br>
+              <p>Popular searches: <span id="popular"></span></p> -->
 
-  <title>Tube The Earth</title>
-</head>
-
-<body>
-  <div class="split left" id="map-section">
-
-  </div>
-  <div class="split right">
-
-    <nav class="navbar navbar-dark bg-danger p-2">
-      <a class="navbar-brand" href="#">
-        <b>Tube The Earth</b>
-      </a>
-      <form class="form-inline my-2 my-lg-0">
-        <input id="search-input" class="form-control mr-sm-2" type="search" placeholder="Search Location" aria-label="Search">
-        <button id="btn-search" class="btn btn-outline-light my-2 my-sm-0" type="submit">Tube</button>
-        <button id="btn-temp" class="btn btn-outline-light my-2 my-sm-0" type="button">Temp</button>
-        <input id="lat" type=text value="" placeholder="latitude">
-        <input id="long" type=text value="" placeholder="longitude">
-        <input id="rad" type=text value="" placeholder="radius (in miles)">
-
-      </form>
-
-    </nav>
-    <div class="card bg-dark" style="width:100%">
-      <div class="row mx-auto"></div>
-      <div class="mx-auto">
-
-        <div class="videoWrapper" id="videoIframe">
-          <iframe width="100%" src="https://www.youtube.com/embed/PN_us-YBMZM" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-
-        </div>
-        <div class="row">
-          <ul class="nav nav-pills mx-auto" style="width:100%">
-            <li class="nav-item">
-              <a class="nav-link bg-secondary text-light m-2" href="#">Recently Uploaded From This Location</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-dark bg-danger  m-2" href="#">Viewing History</a>
-            </li>
-          </ul>
-
-          <div class="container bg-dark">
-            <div class="card bg-dark" style="width:100%">
-              <div class="cardThumb">
-              <img class="card-img-top" id="cardThumb1" src="resources/img/img1_DSF9340-HDR.jpg" alt="Card image" alt="Thumbnail">
+            <div class="split right">
+          
+              <nav class="navbar navbar-dark bg-danger p-2">
+                <a class="navbar-brand" href="#">
+                  <b>Tube The Earth</b>
+                </a>
+                <!-- <form class="form-inline my-2 my-lg-0">
+                  <input id="search-input" class="form-control mr-sm-2" type="search" placeholder="Search Location" aria-label="Search">
+                  <button id="btn-search" class="btn btn-outline-light my-2 my-sm-0" type="submit">Tube</button>
+                </form> -->
+                <form class="form-inline my-2 my-lg-0">  
+                  <div id="floating-panel">
+                    <input id="address" type="textbox" placeholder="Portsmouth, NH">
+                    <input id="submit" class="btn btn-outline-light my-2 my-sm-0" type="button" value="Geocode">
+                  </div>
+                </form>
+                  <!-- <button id="btn-temp" class="btn btn-outline-light my-2 my-sm-0" type="button">Temp</button>
+                  <input id="lat" type=text value="" placeholder="latitude">
+                  <input id="long" type=text value="" placeholder="longitude"> -->
+                  <form class="form-inline my-2 my-lg-0">
+                    <h5>Search Radius (in miles)</h5>
+                    <select id="rad" name="radius">
+                      <option value="1">1</option>
+                      <option value="5">5</option>
+                      <option value="10" selected>10</option>
+                      <option value="50">50</option>
+                    </select>
+                </form>
+              </nav>
+              <div class="card bg-dark" style="width:100%">
+                <div class="row mx-auto"></div>
+                <div class="mx-auto" style="width:100%">
+          
+                  <div class="videoWrapper" style="width:100%" id="videoIframe">
+                    <iframe width="100%" src="https://www.youtube.com/embed/asgENCuBoKk" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
+                    </iframe>
+                  </div>
+                  <div class="row">
+                    <ul class="nav nav-pills mx-auto" style="width:100%">
+                      <li class="nav-item">
+                        <a id="recently" class="nav-link bg-secondary text-light m-2" href="#">Additional Results</a>
+                      </li>
+                      <li class="nav-item">
+                        <a id="history" class="nav-link text-dark bg-danger  m-2" href="#">History</a>
+                      </li>
+                    </ul>
+                    <div id="additionalDiv" style="width:100%">
+                      <div class="container bg-dark">
+                        <div class="videoWrapper" style="width:100%">
+                          <div id="cardThumb1">
+                          <img class="card-img-top" id="cardThumb1" src="resources/img/img1_DSF9340-HDR.jpg" alt="Card image" alt="Thumbnail">
+                          </div>
+                          <!-- <div class="card-img-overlay">
+                            <p class="card-text"><span id="youtubeTitle1"></span></p>
+                            <a href="#" id="youtubeLink1" class="btn btn-danger"></a>
+                          </div> -->
+                        </div>
+                        <div class="videoWrapper" style="width:100%">
+                            <div id="cardThumb2">
+                              <img class="card-img-top" id="cardThumb2" src="resources/img/IMG_7559.JPG" alt="Card image" alt="Thumbnail">
+                            </div>
+                          <!-- <div class="card-img-overlay">
+                            <p class="card-text"><span id="youtubeTitle2"></span> </p>
+                            <a href="#" id="youtubeLink2" class="btn btn-danger"></a>
+                          </div> -->
+                        </div>
+                        <div class="videoWrapper" style="width:100%">
+                            <div id="cardThumb3">
+                              <img class="card-img-top" id="cardThumb3" src="resources/img/img2_DSCF6619.JPG" alt="Card image" alt="Thumbnail">
+                            </div>
+                          <!-- <div class="card-img-overlay">
+                            <p class="card-text"><span id="youtubeTitle3"></span></p>
+                            <a href="#" id="youtubeLink3" class="btn btn-danger"></a>
+                          </div> -->
+                        </div>
+                        <div class="videoWrapper" style="width:100%">
+                          <div id="cardThumb4">
+                            <img class="card-img-top" id="cardThumb4" src="resources/img/img3_DSF8751-HDR.jpg" alt="Card image" alt="Thumbnail">
+                          </div>
+                          <!-- <div class="card-img-overlay">
+                            <p class="card-text"><span id="youtubeTitle4"></span></p>
+                            <a href="#" id="youtubeLink4" class="btn btn-danger"></a>
+                          </div> -->
+                        </div>
+                      </div>
+                    </div>
+                      <div id="historyDiv" style="width:100%">
+                        <span>
+                          <img src="resources/img/youtube image.png" height="50px" alt="Thumbnail">
+                          <caption>Random Title</caption>
+                        </span>
+                        <HR>
+                        <span>
+                          <img src="resources/img/youtube image.png" height="50px" alt="Thumbnail">
+                          <caption>Random Title</caption>
+                        </span>
+                        <HR>
+                        <span>
+                          <img src="resources/img/youtube image.png" height="50px" alt="Thumbnail">
+                          <caption>Random Title</caption>
+                        </span>
+                        <HR>
+                        <span>
+                          <img src="resources/img/youtube image.png" height="50px" alt="Thumbnail">
+                          <caption>Random Title</caption>
+                        </span>
+                    </div>
+                      <HR>
+                    </div>
+                  </div>
+                </div>
               </div>
-              <div class="card-img-overlay">
-                <p class="card-text"><span id="youtubeTitle1">Lorem ipsum dolor sit amet</span></p>
-                <a href="#" id="youtubeLink1" class="btn btn-danger">46.414382,10.013988</a>
-              </div>
-            </div>
-            <div class="card bg-dark" style="width:100%">
-                <div class="cardThumb">
-              <img class="card-img-top" id="cardThumb2" src="resources/img/IMG_7559.JPG" alt="Card image" alt="Thumbnail">
-              </div>
-              <div class="card-img-overlay">
-                <p class="card-text"><span id="youtubeTitle2">Pri ancillae epicurei et, stet ornatus ne mel, iusto fabellas mel in.</span> </p>
-                <a href="#" id="youtubeLink2" class="btn btn-danger">46.414382,10.013988</a>
-              </div>
-            </div>
-            <div class="card bg-dark" style="width:100%">
-                <div class="cardThumb">
-              <img class="card-img-top" id="cardThumb3" src="resources/img/img2_DSCF6619.JPG" alt="Card image" alt="Thumbnail">
-              </div>
-              <div class="card-img-overlay">
-                <p class="card-text"><span id="youtubeTitle3">Mel graeci possim assueverit cu, an vim fugit omnes salutandi. Ea sale assum exerci quo, no lorem convenire
-                  cotidieque est.</span></p>
-                <a href="#" id="youtubeLink3" class="btn btn-danger">46.414382,10.013988</a>
-              </div>
-            </div>
-            <div class="card bg-dark" style="width:100%">
-              <div class="cardThumb">
-                <img class="card-img-top" id="cardThumb4" src="resources/img/img3_DSF8751-HDR.jpg" alt="Card image" alt="Thumbnail">
-            </div>
-              <div class="card-img-overlay">
-                <p class="card-text"><span id="youtubeTitle4">Vix eros adolescens id, ei alii erat vitae nec.</span></p>
-                <a href="#" id="youtubeLink4" class="btn btn-danger">46.414382,10.013988</a>
-              </div>
-            </div>
-            <span>
-              <img src="resources/img/youtube image.png" height="50px" alt="Thumbnail">
-              <caption>Random Title</caption>
-            </span>
-            <HR>
-            <span>
-              <img src="resources/img/youtube image.png" height="50px" alt="Thumbnail">
-              <caption>Random Title</caption>
-            </span>
-            <HR>
-            <span>
-              <img src="resources/img/youtube image.png" height="50px" alt="Thumbnail">
-              <caption>Random Title</caption>
-            </span>
-            <HR>
-            <span>
-              <img src="resources/img/youtube image.png" height="50px" alt="Thumbnail">
-              <caption>Random Title</caption>
-            </span>
-            <HR>
-          </div>
-        </div>
-      </div>
-
-      <!-- Firebase -->
-      <script src="https://www.gstatic.com/firebasejs/4.13.0/firebase.js"></script>
-      <script>
-        // Initialize Firebase
-        var config = {
-          apiKey: "AIzaSyDQSJG2BNDwdCddiSGX3OR6drYw5XHKrSY",
-          authDomain: "tube-the-earth-44f7e.firebaseapp.com",
-          databaseURL: "https://tube-the-earth-44f7e.firebaseio.com",
-          projectId: "tube-the-earth-44f7e",
-          storageBucket: "tube-the-earth-44f7e.appspot.com",
-          messagingSenderId: "978647815700"
-        };
-        firebase.initializeApp(config);
-      </script>
-
-      <!-- Bootstrap related JS -->
       <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
-
+      <script src="https://www.gstatic.com/firebasejs/4.13.0/firebase.js"></script>
+      <script src="https://code.jquery.com/jquery.js"></script>
+      <script src="firebase.js" type="text/javascript"></script>
       <script src="resources/app.js"></script>
-</body>
-
+    <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBPJY8PEhnSLeidBniCMbet80SlznQUFvM&callback=initMap">
+    </script>
+  </body>
 </html>
