--- a/index.html
+++ b/index.html
@@ -14,42 +14,35 @@
     <meta charset="utf-8">
   </head>
   <body>
-        <div class="split left" id="map-section"></div>
-
-              <!-- <input type="text" id="search-field"></input>
-              <button id="search-button">Submit</button>
-              <br>
-              <p>Popular searches: <span id="popular"></span></p> -->
-
-            <div class="split right">
-          
-              <nav class="navbar navbar-dark bg-danger p-3">
-                <a class="navbar-brand" href="#">
-                  <b>Tube The Earth</b>
-                </a>
-              <div>
-                <div class="column input-group search-nav">
-                  <form class="form-inline">  
-                    <div class="input-group mb-3" id="floating-panel">
-                      <input id="address" type="textbox"
-                        class="form-control w-75 p-2"
-                        placeholder="Search By Location">
-                      <input id="submit" class="btn btn-outline-light w-25" type="button" value="Tube">
-                    <div class="row">
-                    <form class="form-inline">
-                  </div>
-                    <div class="row  mt-1">
-                      <h6 class="colsmall mx-3 my-1">Radius (in miles)</h6>
-                      <select id="rad" name="radius" CLASS="small">
-                        <option value="1">1</option>
-                        <option value="5">5</option>
-                        <option value="10" selected>10</option>
-                        <option value="50">50</option>
-                      </select>
-                    </div>
-                  </form>
-                </form>
-        </div>
+    <div class="split left" id="map-section"></div>
+    <div class="split right">
+      <nav class="navbar navbar-dark bg-danger p-3">
+        <a class="navbar-brand" href="#">
+          <b>Tube The Earth</b>
+        </a>
+    <div>
+        <div class="column input-group search-nav">
+          <form class="form-inline">  
+            <div class="input-group mb-3" id="floating-panel">
+              <input id="address" type="textbox"
+                class="form-control w-75 p-2"
+                placeholder="Search By Location">
+              <input id="submit" class="btn btn-outline-light w-25" type="button" value="Tube">
+            <div class="row">
+            <form class="form-inline">
+          </div>
+            <div class="row  mt-1">
+              <h6 class="colsmall mx-3 my-1">Radius (in miles)</h6>
+              <select class="nav nav-pills ml-3" id="rad" name="radius" class="small">
+                <option value="1">1</option>
+                <option value="5">5</option>
+                <option value="10" selected>10</option>
+                <option value="50">50</option>
+              </select>
+            </div>
+          </form>
+        </form>
+    </div>
 </div>
  
               </nav>
