--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         crossorigin="anonymous">
     <!-- Resource links -->
     <link rel="stylesheet" type="text/css" href="resources/style.css">
-    <title>Geocoding service</title>
+    <title>Tube The Earth</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
   </head>
@@ -60,7 +60,7 @@
                         <a id="recently" class="nav-link bg-secondary text-light m-2" href="#">Additional Results</a>
                       </li>
                       <li class="nav-item">
-                        <a id="history" class="nav-link text-dark bg-danger  m-2" href="#">History</a>
+                        <a id="history" class="nav-link text-dark bg-danger  m-2" href="#">Trending</a>
                       </li>
                     </ul>
                     <div id="additionalDiv" style="width:100%">
@@ -103,23 +103,23 @@
                         </div>
                       </div>
                     </div>
-                      <div id="historyDiv" style="width:100%">
-                        <span>
+                      <div class="ml-3" id="historyDiv" style="width:100%">
+                        <span id="history1">
                           <img src="resources/img/youtube image.png" height="50px" alt="Thumbnail">
                           <caption>Random Title</caption>
                         </span>
                         <HR>
-                        <span>
+                        <span id="history2">
                           <img src="resources/img/youtube image.png" height="50px" alt="Thumbnail">
                           <caption>Random Title</caption>
                         </span>
                         <HR>
-                        <span>
+                        <span id="history3">
                           <img src="resources/img/youtube image.png" height="50px" alt="Thumbnail">
                           <caption>Random Title</caption>
                         </span>
                         <HR>
-                        <span>
+                        <span id="history4">
                           <img src="resources/img/youtube image.png" height="50px" alt="Thumbnail">
                           <caption>Random Title</caption>
                         </span>
@@ -134,6 +134,7 @@
       <script src="https://code.jquery.com/jquery.js"></script>
       <script src="firebase.js" type="text/javascript"></script>
       <script src="resources/app.js"></script>
+      <script src="resources/app-2.js"></script>
     <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBPJY8PEhnSLeidBniCMbet80SlznQUFvM&callback=initMap">
     </script>
