fixed return bug

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </a>
     <div>
         <div class="column input-group search-nav">
-          <form class="form-inline">  
+          <form onsubmit="event.preventDefault();" class="form-inline">  
             <div class="input-group mb-3" id="floating-panel">
               <input id="address" type="textbox"
                 class="form-control w-75 p-2"
