--- a/index3.html
+++ b/index3.html
@@ -139,8 +139,8 @@
       <script src="https://www.gstatic.com/firebasejs/4.13.0/firebase.js"></script>
       <script src="https://code.jquery.com/jquery.js"></script>
       <script src="firebase.js" type="text/javascript"></script>
-      <script src="resources/app4.js"></script>
-      <!-- <script src="app3.js"></script> -->
+      <!-- <script src="resources/app4.js"></script> -->
+      <script src="app2.js"></script>
     <!-- Google Maps -->
     <script src="http://maps.google.com/maps/api/js?key=AIzaSyCXz3ctOfdCYgcEHTokEyM5Dso_kiMJDeY"></script>
     <script async defer
