--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <script src="https://code.jquery.com/jquery.js"></script>
         <script src="http://maps.google.com/maps/api/js?key=AIzaSyCXz3ctOfdCYgcEHTokEyM5Dso_kiMJDeY"></script>
         <!--<script src="http://maps.google.com/maps/api/js"></script>-->
-        <script src="app2.js" type="text/javascript"></script>
+        <script src="app5.js" type="text/javascript"></script>
         <!-- <script src="app.js" type="text/javascript"></script> -->
     </head>
     <body>
@@ -12,6 +12,6 @@
         <button id="search-button">Submit</button>
         <br>
         <p>Videos from your area: <span id="user-results"></span></p>
-        <p>Recent searches: <span id="recent-searches"></span></p>
+        <p>Recent searches: <span id="historyDiv"></span></p>
     </body>
 </html>
