--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
     <!-- Resource links -->
-    <link rel="stylesheet" type="text/css" href="style7.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>Tube The Earth</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
@@ -123,8 +123,8 @@
       <script src="https://www.gstatic.com/firebasejs/4.13.0/firebase.js"></script>
       <script src="https://code.jquery.com/jquery.js"></script>
       <script src="firebase.js" type="text/javascript"></script>
-      <script src="app5.js"></script>
-      <script src="app7.js"></script>
+      <script src="app.js"></script>
+      <script src="app-2.js"></script>
       <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBPJY8PEhnSLeidBniCMbet80SlznQUFvM&callback=initMap">
     </script>
   </body>
